// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renders bold text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 dhCBjk"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> renders regular text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 kgmkNM"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> renders text with display content auto aligned when align prop is of value "inherit" 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 epjjtG"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> renders text with display content auto aligned when align prop is of value "initial" 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 hPMixl"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> renders text with display content center aligned 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 icdclg"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> renders text with display content right aligned 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 dQFiFD"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> renders underlined text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 khUUmU"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;
